test/semantic_errors/missing_variable_declaration1.mc
void main() {
    b = true; /* missing previous declaration of 'b' */
}